# diary-app

./: .gitignore  docker-compose.yaml
backend/: Dockerfile.dev
backend/app/: .env.template  .gitignore  alembic.ini  logging_config.yaml  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 83ec7c281348_create_initial_tables.py
backend/app/src/: database.py  init_db.py  main.py
backend/app/src/api/routers/: ai.py  diary.py
backend/app/src/models/: model.py
backend/app/src/repository/: diary_repository.py
backend/app/src/schemas/: ai.py  diary.py
backend/app/src/services/: ai_service.py
frontend/: .env.template  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/_components/: diary-item.tsx  diary-list.tsx  header.tsx  hero-section.tsx  stats-grid.tsx
frontend/src/app/api/ai/: route.ts
frontend/src/app/api/diary/: route.ts
frontend/src/app/api/diary/[id]/: route.ts
frontend/src/app/diary/[id]/: page.tsx
frontend/src/app/diary/[id]/_components/: ai-comment-section.tsx  diary-content.tsx  header.tsx
frontend/src/app/diary/new/: page.tsx
frontend/src/app/diary/new/_components/: diary-form.tsx  header.tsx
frontend/src/components/ui/: button.tsx  link-button.tsx
frontend/src/lib/: logger.ts  utils.ts
frontend/src/types/: ai.ts  diary.ts
